--- a/Assignments/Assignment1.html
+++ b/Assignments/Assignment1.html
@@ -7,7 +7,7 @@
     <title>Assignment1</title>
 </head>
 <body>
-    <h3><b>Nae : </b> Vani Jain <br> <b>Email : </b> vajain@ingenuitygaming.com <br><b>Address : </b>1st Floor, 14, Shaheed Captain Sameer Bhan Marg, F Block, Sector 8, Noida, Uttar Pradesh 201301</h3>
+    <h3><b>Name : </b> Vani Jain <br> <b>Email : </b> vajain@ingenuitygaming.com <br><b>Address : </b>1st Floor, 14, Shaheed Captain Sameer Bhan Marg, F Block, Sector 8, Noida, Uttar Pradesh 201301</h3>
 
 </body>
 </html>
