--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
 <a href="./Assignments/Assignment1.html">Assignment1</a>
+<a href="./Assignments/Assignment2.html">Assignment2</a>
+<a href="./Assignments/Assignment3.html"></a>
