--- a/Assignments/Assignment2.html
+++ b/Assignments/Assignment2.html
@@ -71,7 +71,7 @@
         </div>
         <div class="p2">
             
-                <ul style="list-type:bullets;padding-left:35%;padding-right: 30%;">
+                <ul style="padding-left:35%;padding-right: 30%;">
                     <li><b>paragraph -</b> broad idea Lorem ipsum dolor sit, amet consectetur adipisicing elit.</li>
                     <li><b>sentences - </b>broad idea Lorem ipsum dolor sit, amet consectetur adipisicing elit.</li>
                     <li><b>topic sentence -</b>broad idea Lorem ipsum dolor sit, amet consectetur adipisicing elit.</li>
