--- a/Assignments/Assignment4.html
+++ b/Assignments/Assignment4.html
@@ -31,16 +31,16 @@
         <section id="sec1">
             <div class="imgContainer">
                 <div class="imgBox">
-                    <img src="../Assets/men1.jpg" alt="">
+                    <img src="./images/men1.jpg" alt="">
                 </div>
                 <div class="imgBox">
-                    <img src="../Assets/women1.jpg" alt="">
+                    <img src="./images/women1.jpg" alt="">
                 </div>
                 <div class="imgBox">
-                    <img src="../Assets/men2.jpg" alt="">
+                    <img src="./images/men2.jpg" alt="">
                 </div>
                 <div class="imgBox">
-                    <img src="../Assets/women2.jpg" alt="">
+                    <img src="./images/women2.jpg" alt="">
                 </div>
             </div>
         </section>
@@ -54,15 +54,15 @@
             
             <aside><div class="box">
                 <!-- <h2 style="color: black;">Article 1</h2> -->
-                <img src="../Assets/image4.jpg" alt="">
+                <img src="./images/image4.jpg" alt="">
             </div>
             <div class="box">
                 <!-- <h2 style="color: black;">Article 2</h2> -->
-                <img src="../Assets/article2.jpg" alt="">
+                <img src="./images/article2.jpg" alt="">
             </div>
             <div class="box">
                 <!-- <h2 style="color: black">Article 3</h2> -->
-                <img src="../Assets/image3.jpg" alt="">
+                <img src="./images/image3.jpg" alt="">
             </div>
         </aside>
 
@@ -72,22 +72,22 @@
         <section id="sec3">
 
             <div class="borderBox">
-                <img src="../Assets/Reactjsimage.jpg" alt="">
+                <img src="./images/Reactjsimage.jpg" alt="">
                 <h2>ReactJS</h2><h3>Introduction</h3><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero officia voluptatem quos odio omnis, eaque itaque laborum rerum fuga? Quasi.</p>
                 <button><a href="https://reactjs.org/">Read More</a></button>
 
             </div>
             <div class="borderBox">
-                <img src="../Assets/cssimage.jpg" alt="">
+                <img src="./images/cssimage.jpg" alt="">
                 <h2>CSS</h2><h3>Introduction</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero officia voluptatem quos odio omnis, eaque itaque laborum rerum fuga? Quasi.</p>
                 <button><a href="https://www.w3schools.com/css/">Read More</a></button></div>
             <div class="borderBox">
-                <img src="../Assets/HTMLimage.jpg" alt=""><h2>HTML</h2><h3>Introduction</h3>
+                <img src="./images/HTMLimage.jpg" alt=""><h2>HTML</h2><h3>Introduction</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero officia voluptatem quos odio omnis, eaque itaque laborum rerum fuga? Quasi.</p>
                 <button><a href="https://www.w3schools.com/html/">Read More</a></button></div>
             <div class="borderBox">
-                <img src="../Assets/bootstrapimage.jpg" alt=""><h2>BootStrap</h2><h3>Introduction</h3>
+                <img src="./images/bootstrapimage.jpg" alt=""><h2>BootStrap</h2><h3>Introduction</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero officia voluptatem quos odio omnis, eaque itaque laborum rerum fuga? Quasi.</p>
                 <button><a href="https://getbootstrap.com/">Read More</a></button>
                 <a href=""></a>
