--- a/Assignments/Assignment4.html
+++ b/Assignments/Assignment4.html
@@ -160,7 +160,7 @@
             <div class="Thankyou">
                 <hr>
                 <h2>Thankyou for visiting my website!</h2>
-            <a href="https://vanijain007.github.io/IngenuityGamingTraining/"><h3>Github URL</h3></a>
+            <a href="https://vanijain007.github.io/AssignmentsTraining/Assignments/Assignment4.html"><h3>Github URL</h3></a>
             </div>
         </footer>
 
