--- a/index.html
+++ b/index.html
@@ -2,4 +2,4 @@
 <a href="./Assignments/Assignment2.html">Assignment2</a>
 <a href="./Assignments/Assignment3.html">Assignment3</a>
 <a href="./Assignments/Assignment4.html">Assignment4</a>
-<a href="./Assignments/Assignment5.html"></a>
+<a href="./Assignments/Assignment5.html">Assignment5</a>
