--- a/Assignments/Assignment5.html
+++ b/Assignments/Assignment5.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./style5.css">
 </head>
 <body>
-        <div class="sky"></div>
+        <div class="sky">
         <div class="moon">
             <img src="./images/moonimage2.png" alt="">
         </div>
@@ -26,6 +26,7 @@
             <img src="./images/wheelimage.png" class="front" alt="wheel1">
             <img src="./images/wheelimage.png" class="back" alt="wheel2">
         </div>
+    </div>
         
 </body>
 </html>
