--- a/Assignments/Assignment8.html
+++ b/Assignments/Assignment8.html
@@ -21,7 +21,11 @@
         document.write("<br> multiplication is "+multiplication);
         var division=a/b;
         document.write("<br> division is 10"+division);
-        document.body.style.backgroundColor="yellow";
+        document.body.style.backgroundColor="red";
+        document.body.style.color="white";
+        document.body.style.fontSize="30px";
+        document.body.style.textAlign="center";
+        document.body.style.textShadow="2px 1px white"
     </script>
 </body>
 </html>
