--- a/Assignments/Assignment8.html
+++ b/Assignments/Assignment8.html
@@ -7,21 +7,22 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Mathematical Operations</h1>
     <script>
         var a=parseInt(prompt("Enter First Number "));
-        document.write("<br>First entered number"+a);
+        document.write("<br>First entered number "+a);
         var b=parseInt(prompt("Enter second number "));
-        document.write("<br>Second entered no"+b);
+        document.write("<br>Second entered no "+b);
         var addition=a+b;
         
-        document.write("<br>sum is "+addition);
+        document.write("<br> sum is "+addition);
         var subtraction=a-b;
-        document.write("<br>subtraction is "+subtraction);
+        document.write("<br> subtraction is "+subtraction);
         var multiplication=a*b;
         document.write("<br> multiplication is "+multiplication);
         var division=a/b;
-        document.write("<br> division is 10"+division);
-        document.body.style.backgroundColor="red";
+        document.write("<br> division is "+division);
+        document.body.style.backgroundColor="deeppink";
         document.body.style.color="white";
         document.body.style.fontSize="30px";
         document.body.style.textAlign="center";
