--- a/Assignments/Assignment9.html
+++ b/Assignments/Assignment9.html
@@ -6,8 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./Assignment9.js">
+    <STYLE>
+        *{
+            padding: 0px;
+            margin: auto;
+        }
+        IMG{
+            height:100vh;
+            width:100%;
+        }
+    </STYLE>
 </head>
 <body>
-
+    <img src="../Assignments/images/Assignment9ss.png" alt="">
 </body>
 </html>
