updated index file

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <a href="./Assignments/Assignment3.html">Assignment3</a>
 <a href="./Assignments/Assignment4.html">Assignment4</a>
 <a href="./Assignments/Assignment5.html">Assignment5</a>
-<a href="./Assignments/Assignment6.html">Assignment6</a>
-<a href="./Assignments/Assignment7.html">Assignment7</a>
-<a href="./Assignments/Assignment8.html">Assignment8</a>
-<a href="./Assignments/Assignment9.html">Assignment9</a>
+<a href="./Assignments/Assignment6.html">Display date and time</a>
+<a href="./Assignments/Assignment7.html">Display name</a>
+<a href="./Assignments/Assignment8.html">Mathematical Operations</a>
+<a href="./Assignments/Assignment9.html">Execute code in Vs</a>
