--- a/index.html
+++ b/index.html
@@ -1,9 +1,17 @@
-<a href="./Assignments/Assignment1.html">Assignment1</a>
-<a href="./Assignments/Assignment2.html">Assignment2</a>
-<a href="./Assignments/Assignment3.html">Assignment3</a>
-<a href="./Assignments/Assignment4.html">Assignment4</a>
-<a href="./Assignments/Assignment5.html">Assignment5</a>
+<a href="./Assignments/Assignment1.html">Information</a>
+<br>
+<a href="./Assignments/Assignment2.html">WELCOME pAGE</a>
+<br>
+<a href="./Assignments/Assignment3.html">LANDING</a>
+<br>
+<a href="./Assignments/Assignment4.html">Landing Site</a>
+<br>
+<a href="./Assignments/Assignment5.html">Animation</a>
+<br>
 <a href="./Assignments/Assignment6.html">Display date and time</a>
+<br>
 <a href="./Assignments/Assignment7.html">Display name</a>
+<br>
 <a href="./Assignments/Assignment8.html">Mathematical Operations</a>
+<br>
 <a href="./Assignments/Assignment9.html">Execute code in Vs</a>
