--- a/Assignments/Assignment7.html
+++ b/Assignments/Assignment7.html
@@ -13,10 +13,10 @@
     <script>
         document.body.style.backgroundColor="yellowgreen";
         document.body.style.fontFamily='Arial';
-        document.body.style.color="deeppink";
+        document.body.style.color="white";
         var name=prompt("Enter your name");
         // document.prompt.backgroundColor="pink";
-        document.body.style.backgroundColor=prompt('backgroundColor?','yellowgreen')
+        document.body.style.backgroundColor=prompt('backgroundColor?','pink')
         document.write("My name is "+name);
         document.body.style.fontSize="30px";
         document.body.style.textAlign="center";
