updated index file

--- a/index.html
+++ b/index.html
@@ -15,3 +15,9 @@
 <a href="./Assignments/Assignment8.html">Mathematical Operations</a>
 <br>
 <a href="./Assignments/Assignment9.html">Execute code in Vs</a>
+<br>
+<a href="./Assignments/Assignment10.html">find sum</a>
+<br>
+<a href="./Assignments/Assignment10task2.html">guess Number</a>
+<br>
+<a href="./Assignments/Assignment10task3.html">Information</a>
