--- a/Assignments/Assignment10task3.html
+++ b/Assignments/Assignment10task3.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <script>
+        function findInfo(){
 var info={
         name:"Vani Jain",
         age:20,
@@ -27,6 +28,7 @@ var info={
         document.body.style.marginTop="38vh";
         document.body.style.fontStyle="Italic";
         document.body.style.fontWeight="5px";
+    }
 
     </script>
 </body>
