--- a/Assignments/Assignment2.html
+++ b/Assignments/Assignment2.html
@@ -35,8 +35,10 @@
             text-align: center;
         }
         .image img{
-            height: 60vh;
-            padding-left:55vh;
+            height: 90vh;
+            width:90%;
+            margin-left: 70px;;
+            /* padding-left:55vh; */
         }
         .paragraphs{
             text-align: center;
@@ -61,7 +63,7 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt, assumenda.</p>
     </div>
     <div><p><div class="image">
-        <img src="./images/image1.jpg" alt="">
+        <img src="./images/girlimage.jpg" alt="">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, eaque reprehenderit sequi optio eligendi maiores provident expedita. Velit, asperiores quia?</p>
     </div></p></div>
     
