updated index file

--- a/index.html
+++ b/index.html
@@ -23,3 +23,5 @@
 <a href="./Assignments/Assignment10task3.html">Information</a>
 <br>
 <a href="./Assignments/Assingnemt11.html">Javascript Concepts</a>
+<br>
+<a href="./Assignments/Assignment12.html">Javascript Functions</a>
