--- a/Assignments/Assingnemt11.html
+++ b/Assignments/Assingnemt11.html
@@ -71,7 +71,8 @@ document.write(fruits);
 </body>
 </html> -->
 <script>
-document.body.style.background="linear-gradient(90deg, rgba(238,174,202,1) 0%, rgba(182,182,221,1) 46%, rgba(148,187,233,1) 100%)"; 
+// document.body.style.background="linear-gradient(90deg, rgba(238,174,202,1) 0%, rgba(182,182,221,1) 46%, rgba(148,187,233,1) 100%)"; 
+document.body.style.background="linear-gradient(to right,blue,skyblue)"
 document.body.style.fontFamily="cursive";
 document.body.style.fontSize="20px";
 document.body.style.textAlign="center";
