--- a/index.html
+++ b/index.html
@@ -25,3 +25,177 @@
 <a href="./Assignments/Assingnemt11.html">Javascript Concepts</a>
 <br>
 <a href="./Assignments/Assignment12.html">Javascript Functions</a>
+
+</html>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
+    <script src="./js/myscript.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
+    
+    <style>
+        table#alter tr:nth-child(even) {
+            background-color: darkcyan;
+        }
+
+        table,
+        td {
+            border: 2px solid;
+            width: 100%;
+            font-size: 20px;
+            ;
+
+        }
+
+        table {
+            border-collapse: collapse;
+            border-radius: 30px;
+        }
+
+        tr:hover {
+            color: rgb(206, 197, 197);
+        }
+
+        caption#a {
+            background-color: rgb(23, 23, 56);
+            color: white;
+            height: 40px;
+            justify-content: center;
+            border-radius: 3px;
+        }
+
+        th {
+            text-align: left;
+        }
+
+        th#std {
+            color: green;
+        }
+    </style>
+</head>
+
+<body>
+    <table cellpadding="15" cellspacing="15" id="alter">
+        <tr>
+            <caption id="a">
+                Ingenuity Gaming Practicals
+
+            </caption>
+        </tr>
+        <tr>
+            <th># Practical Name</th>
+            <th>Link</th>
+            <th>Status</th>
+            <th>Tools</th>
+        </tr>
+        <tr>
+            <td>1 Make your First Web Page Live.
+            </td>
+            <td><a href="./Assignments/Assignment1.html">Information</a></td>
+            <td>Unchecked</td>
+            <td><i class="fa fa-pencil"></i> <i class="fa fa-trash"></i></td>
+        </tr>
+        <tr>
+            <td>2 Create a Tribute page with HTML Elements and style with CSS Properties. 
+            </td>
+            <td><a href="./Assignments/Assignment2.html">Welcome Page </a></td>
+            <td>Unchecked</td>
+            <td><i class="fa fa-pencil"></i> <i class="fa fa-trash"></i></td>
+        </tr>
+        <tr>
+            <td>3 Create a Landing page with HTML Elements and style with CSS Properties. 
+            </td>
+            <td><a href="./Assignments/Assignment3.html">Landing Page</a>
+            </td>
+            <td>Unchecked</td>
+            <td><i class="fa fa-pencil"></i> <i class="fa fa-trash"></i>
+
+            </td>
+        </tr>
+        <tr>
+            <td>4 Create a Single Page website with following Template. 
+            </td>
+            <td> <a href="./Assignments/Assignment4.html">-Landing Site</a></td>
+            <td>Unchecked</td>
+            <td><i class="fa fa-pencil"></i> <i class="fa fa-trash"></i></td>
+        </tr>
+        <tr>
+            <td>5 Create a Car Animation (or Use your own creativity).</td>
+            <td><a href="./Assignments/Assignment5.html">Animation</a></td>
+            <td>Unchecked</td>
+            <td><i class="fa fa-pencil"></i> <i class="fa fa-trash"></i></td>
+        </tr>
+        <tr>
+            <td>6 Create a Card Layout using CSS layout properties.</td>
+            <td> <a href="./Practical_6.html">Practical-6</a></td>
+            <td>Checked</td>
+            <td><i class="fa fa-pencil"></i> <i class="fa fa-trash"></i></td>
+        </tr>
+        <tr>
+            <td>7 Create a web page Layout using div tags.</td>
+            <td> <a href="./Practical7.html">Practical-7</a>
+            </td>
+            <td>Checked</td>
+            <td><i class="fa fa-pencil"></i> <i class="fa fa-trash"></i></td>
+        </tr>
+        <tr>
+            <td>8 Create a Web page having fixed Navigation Bar withthe given content</td>
+            <td> <a href="./Practical8.html">Practical-8</a>
+            </td>
+            <td>Checked</td>
+            <td><i class="fa fa-pencil"></i> <i class="fa fa-trash"></i></td>
+        </tr>
+        <tr>
+            <td>9 Create a Responsive Web Layout with Responsive Navigation Bar.</td>
+            <td> <a href="./practical9.html">Practical-9</a>
+            </td>
+            <td>Checked</td>
+            <td><i class="fa fa-pencil"></i> <i class="fa fa-trash"></i></td>
+        </tr>
+        <tr>
+            <td>10 Create a Responsive Side-Bar Navigation Menu</td>
+            <td> <a href="./Practical10.html">Practical-10</a>
+            </td>
+            <td>Checked</td>
+            <td><i class="fa fa-pencil"></i> <i class="fa fa-trash"></i></td>
+
+        </tr>
+        <tr>
+            <td>11 Create a Responsive Footer Template</td>
+            <td><a href="./Practical11.html">Practical-11</a></td>
+            <td>Checked</td>
+            <td><i class="fa fa-pencil"></i> <i class="fa fa-trash"></i></td>
+        </tr>
+        <tr>
+            <td>12 Create a Table that represent Live Practical Book Records .</td>
+            <td><a href="./Practical12.html">Practical-12</a></td>
+            <td>Checked</td>
+            <td><i class="fa fa-pencil"></i> <i class="fa fa-trash"></i></td>
+        </tr>
+        <tr>
+            <td>13.Create a table of price </td>
+            <td><a href="./Practical_13.html">Practical-13</a></td>
+            <td>Checked</td>
+            <td><i class="fa fa-pencil"></i> <i class="fa fa-trash"></i></td>
+        </tr>
+        <tr>
+            <td>14.Create a Counter Page using JavaScript </td>
+            <td><a href="./Practical-14.html">Practical-14</a></td>
+            <td>Checked</td>
+            <td><i class="fa fa-pencil"></i> <i class="fa fa-trash"></i></td>
+        </tr>
+        <tr>
+            <td>15.Create an HTML Form and Validate it with JavaScript (Client-side Programming Language). </td>
+            <td><a href="./practical_15.html">Practical-15</a></td>
+            <td>Unchecked</td>
+            <td><i class="fa fa-pencil"></i> <i class="fa fa-trash"></i></td>
+        </tr>
+    </table>
+</body>
+
+</html>
