--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<a href="./Assignments/Assignment1.html">Information</a>
+<!-- <a href="./Assignments/Assignment1.html">Information</a>
 <br>
 <a href="./Assignments/Assignment2.html">WELCOME pAGE</a>
 <br>
@@ -24,7 +24,7 @@
 <br>
 <a href="./Assignments/Assingnemt11.html">Javascript Concepts</a>
 <br>
-<a href="./Assignments/Assignment12.html">Javascript Functions</a>
+<a href="./Assignments/Assignment12.html">Javascript Functions</a> -->
 
 </html>
 <!DOCTYPE html>
@@ -131,70 +131,81 @@
             <td><i class="fa fa-pencil"></i> <i class="fa fa-trash"></i></td>
         </tr>
         <tr>
-            <td>6 Create a Card Layout using CSS layout properties.</td>
-            <td> <a href="./Practical_6.html">Practical-6</a></td>
-            <td>Checked</td>
+            <td>6 Print the date in Format</td>
+            <td> <a href="./Assignments/Assignment6.html">Display date and time</a></td>
+            <td>Unchecked</td>
             <td><i class="fa fa-pencil"></i> <i class="fa fa-trash"></i></td>
         </tr>
         <tr>
-            <td>7 Create a web page Layout using div tags.</td>
-            <td> <a href="./Practical7.html">Practical-7</a>
+            <td>7 Take input from user
+                Print name on Document
+                Style it with color.
             </td>
-            <td>Checked</td>
+            <td> <a href="./Assignments/Assignment7.html">Display name</a>
+            </td>
+            <td>Unchecked</td>
             <td><i class="fa fa-pencil"></i> <i class="fa fa-trash"></i></td>
         </tr>
         <tr>
-            <td>8 Create a Web page having fixed Navigation Bar withthe given content</td>
-            <td> <a href="./Practical8.html">Practical-8</a>
+            <td>8 Take two numbers from User and Print
+                Addition:
+                Subtraction:
+                Multiplication:
+                Division:
             </td>
-            <td>Checked</td>
+            <td> <a href="./Assignments/Assignment8.html">Mathematical Operations</a>
+            </td>
+            <td>Unchecked</td>
             <td><i class="fa fa-pencil"></i> <i class="fa fa-trash"></i></td>
         </tr>
         <tr>
-            <td>9 Create a Responsive Web Layout with Responsive Navigation Bar.</td>
-            <td> <a href="./practical9.html">Practical-9</a>
+            <td>9 Execute JS code inside the Editor
+                .</td>
+            <td> <a href="./Assignments/Assignment9.html">Execute code in Vs</a>
             </td>
-            <td>Checked</td>
+            <td>Unchecked</td>
             <td><i class="fa fa-pencil"></i> <i class="fa fa-trash"></i></td>
         </tr>
         <tr>
-            <td>10 Create a Responsive Side-Bar Navigation Menu</td>
-            <td> <a href="./Practical10.html">Practical-10</a>
+            <td>10 Write a logic to perform the sum of n numbers entered by the user, stop if user enters negative number.
             </td>
-            <td>Checked</td>
+            <td> <a href="./Assignments/Assignment10.html">find sum</a>
+            </td>
+            <td>Unchecked</td>
             <td><i class="fa fa-pencil"></i> <i class="fa fa-trash"></i></td>
 
         </tr>
         <tr>
-            <td>11 Create a Responsive Footer Template</td>
-            <td><a href="./Practical11.html">Practical-11</a></td>
-            <td>Checked</td>
+            <td>11 Write a logic to create a game called Guess the Number. </td>
+            <td><a href="./Assignments/Assignment10task2.html">Guess Number</a></td>
+            <td>Unchecked</td>
             <td><i class="fa fa-pencil"></i> <i class="fa fa-trash"></i></td>
         </tr>
         <tr>
-            <td>12 Create a Table that represent Live Practical Book Records .</td>
-            <td><a href="./Practical12.html">Practical-12</a></td>
-            <td>Checked</td>
+            <td>12  Write code to create an Object containing information .</td>
+            <td><a href="./Assignments/Assignment10task3.html">Information</a></td>
+            <td>Unchecked</td>
             <td><i class="fa fa-pencil"></i> <i class="fa fa-trash"></i></td>
         </tr>
         <tr>
-            <td>13.Create a table of price </td>
-            <td><a href="./Practical_13.html">Practical-13</a></td>
-            <td>Checked</td>
+            <td>13.Kindly work on the following JavaScript Task:
+            </td>
+            <td><a href="./Assignments/Assingnemt11.html">Javascript Concepts</a></td>
+            <td>Unchecked</td>
             <td><i class="fa fa-pencil"></i> <i class="fa fa-trash"></i></td>
         </tr>
         <tr>
-            <td>14.Create a Counter Page using JavaScript </td>
-            <td><a href="./Practical-14.html">Practical-14</a></td>
-            <td>Checked</td>
+            <td>14.Perform programs with functions in JavaScript  </td>
+            <td><a href="./Assignments/Assignment12.html">Javascript Functions</a></td>
+            <td>Unchecked</td>
             <td><i class="fa fa-pencil"></i> <i class="fa fa-trash"></i></td>
         </tr>
-        <tr>
+        <!-- <tr>
             <td>15.Create an HTML Form and Validate it with JavaScript (Client-side Programming Language). </td>
             <td><a href="./practical_15.html">Practical-15</a></td>
             <td>Unchecked</td>
             <td><i class="fa fa-pencil"></i> <i class="fa fa-trash"></i></td>
-        </tr>
+        </tr> -->
     </table>
 </body>
 
