update index file

--- a/Assignments/Assignment10task3.html
+++ b/Assignments/Assignment10task3.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html> 
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -8,10 +9,9 @@
 </head>
 <body>
     <script>
-        function findInfo(){
 var info={
         name:"Vani Jain",
-        age:20,
+        age:21,
         address:{city:"Agra",state:"UttarPradesh",pincode:282010},
         hobbies:["singing","programming","outdoor games"],
         display:function(){
@@ -19,7 +19,7 @@ var info={
         }
         };
         document.write(info.display());
-        document.body.style.backgroundImage="linear-gradient(to right,orange,white,lightgreen)";
+        document.body.style.backgroundImage="linear-gradient(to right,orange,white,green)";
         document.body.style.color="brown";
         document.body.style.fontSize="30px";
         document.body.style.textAlign="center";
@@ -28,10 +28,8 @@ var info={
         document.body.style.marginTop="38vh";
         document.body.style.fontStyle="Italic";
         document.body.style.fontWeight="5px";
-    }
 
     </script>
 </body>
 </html>
-
 
