--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         <tr>
             <td>4 Create a Single Page website with following Template. 
             </td>
-            <td> <a href="./Assignments/Assignment4.html">-Landing Site</a></td>
+            <td> <a href="./Assignments/Assignment4.html">Landing Site</a></td>
             <td>Unchecked</td>
             <td><i class="fa fa-pencil"></i> <i class="fa fa-trash"></i></td>
         </tr>
