--- a/index.html
+++ b/index.html
@@ -130,14 +130,14 @@
             <td> 1 Make your First Web Page Live.
             </td>
             <td class="data"><a href="./Assignments/Assignment1.html">Live</a></td>
-            <td>Uncheck</td>
+            <td>Unchecked</td>
             <td><i class="fa fa-pencil"></i> <i class="fa fa-trash"></i></td>
         </tr>
         <tr>
             <td>2 Create a Tribute page with HTML Elements and style with CSS Properties. 
             </td>
             <td><a href="./Assignments/Assignment2.html">Welcome Page </a></td>
-            <td>Uncheck</td>
+            <td>Unchecked</td>
             <td><i class="fa fa-pencil"></i> <i class="fa fa-trash"></i></td>
         </tr>
         <tr>
@@ -145,7 +145,7 @@
             </td>
             <td><a href="./Assignments/Assignment3.html">Landing Page</a>
             </td>
-            <td>Uncheck</td>
+            <td>Unchecked</td>
             <td><i class="fa fa-pencil"></i> <i class="fa fa-trash"></i>
 
             </td>
@@ -154,19 +154,19 @@
             <td>4 Create a Single Page website with following Template. 
             </td>
             <td> <a href="./Assignments/Assignment4.html">Landing Site</a></td>
-            <td>Uncheck</td>
+            <td>Unchecked</td>
             <td><i class="fa fa-pencil"></i> <i class="fa fa-trash"></i></td>
         </tr>
         <tr>
             <td>5 Create a Car Animation (or Use your own creativity).</td>
             <td><a href="./Assignments/Assignment5.html">Animation</a></td>
-            <td>Uncheck</td>
+            <td>Unchecked</td>
             <td><i class="fa fa-pencil"></i> <i class="fa fa-trash"></i></td>
         </tr>
         <tr>
             <td>6 Print the date in Format</td>
             <td> <a href="./Assignments/Assignment6.html">Display date and time</a></td>
-            <td>Uncheck</td>
+            <td>Unchecked</td>
             <td><i class="fa fa-pencil"></i> <i class="fa fa-trash"></i></td>
         </tr>
         <tr>
@@ -176,7 +176,7 @@
             </td>
             <td> <a href="./Assignments/Assignment7.html">Display name</a>
             </td>
-            <td>Uncheck</td>
+            <td>Unchecked</td>
             <td><i class="fa fa-pencil"></i> <i class="fa fa-trash"></i></td>
         </tr>
         <tr>
@@ -188,7 +188,7 @@
             </td>
             <td> <a href="./Assignments/Assignment8.html">Mathematical Operations  </a>
             </td>
-            <td>Uncheck</td>
+            <td>Unchecked</td>
             <td><i class="fa fa-pencil"></i> <i class="fa fa-trash"></i></td>
         </tr>
         <tr>
@@ -196,7 +196,7 @@
                 .</td>
             <td> <a href="./Assignments/Assignment9.html">Execute code in Vs</a>
             </td>
-            <td>Uncheck</td>
+            <td>Unchecked</td>
             <td><i class="fa fa-pencil"></i> <i class="fa fa-trash"></i></td>
         </tr>
         <tr>
@@ -204,33 +204,33 @@
             </td>
             <td> <a href="./Assignments/Assignment10.html">find sum</a>
             </td>
-            <td>Uncheck</td>
+            <td>Unchecked</td>
             <td><i class="fa fa-pencil"></i> <i class="fa fa-trash"></i></td>
 
         </tr>
         <tr>
             <td>11 Write a logic to create a game called Guess the Number. </td>
             <td><a href="./Assignments/Assignment10task2.html">Guess Number</a></td>
-            <td>Uncheck</td>
+            <td>Unchecked</td>
             <td><i class="fa fa-pencil"></i> <i class="fa fa-trash"></i></td>
         </tr>
         <tr>
             <td>12  Write code to create an Object containing information .</td>
             <td><a href="./Assignments/Assignment10task3.html">Information</a></td>
-            <td>Uncheck</td>
+            <td>Unchecked</td>
             <td><i class="fa fa-pencil"></i> <i class="fa fa-trash"></i></td>
         </tr>
         <tr>
             <td>13.Kindly work on the following JavaScript Task:
             </td>
             <td><a href="./Assignments/Assingnemt11.html">Javascript Concepts</a></td>
-            <td>Uncheck</td>
+            <td>Unchecked</td>
             <td><i class="fa fa-pencil"></i> <i class="fa fa-trash"></i></td>
         </tr>
         <tr>
             <td>14.Perform programs with functions in JavaScript  </td>
             <td><a href="./Assignments/Assignment12.html">Javascript Functions</a></td>
-            <td>Uncheck</td>
+            <td>Unchecked</td>
             <td><i class="fa fa-pencil"></i> <i class="fa fa-trash"></i></td>
         </tr>
         <!-- <tr>
