--- a/index.html
+++ b/index.html
@@ -233,12 +233,12 @@
             <td>Unchecked</td>
             <td><i class="fa fa-pencil"></i> <i class="fa fa-trash"></i></td>
         </tr>
-        <!-- <tr>
-            <td>15.Create an HTML Form and Validate it with JavaScript (Client-side Programming Language). </td>
-            <td><a href="./practical_15.html">Practical-15</a></td>
+        <tr>
+            <td>15.Write Programs of following questions </td>
+            <td><a href="./Assignments/Assignment13.html">Programs Javascript</a></td>
             <td>Unchecked</td>
             <td><i class="fa fa-pencil"></i> <i class="fa fa-trash"></i></td>
-        </tr> -->
+        </tr>
     </table>
 </body>
 
