--- a/index.html
+++ b/index.html
@@ -239,6 +239,12 @@
             <td>Unchecked</td>
             <td><i class="fa fa-pencil"></i> <i class="fa fa-trash"></i></td>
         </tr>
+        <tr>
+            <td>15.Task3 program</td>
+            <td><a href="./Assignments/Assignment13Task3.html">Task3</a></td>
+            <td>Unchecked</td>
+            <td><i class="fa fa-pencil"></i> <i class="fa fa-trash"></i></td>
+        </tr>
     </table>
 </body>
 
