--- a/index.html
+++ b/index.html
@@ -245,6 +245,12 @@
             <td>Unchecked</td>
             <td><i class="fa fa-pencil"></i> <i class="fa fa-trash"></i></td>
         </tr>
+        <tr>
+            <td>16.WHAKE A MOLE GAME</td>
+            <td><a href="./Assignments/Assignment14.html">Game</a></td>
+            <td>Unchecked</td>
+            <td><i class="fa fa-pencil"></i> <i class="fa fa-trash"></i></td>
+        </tr>
     </table>
 </body>
 
