--- a/Assignments/AssignmentPractice.html
+++ b/Assignments/AssignmentPractice.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WHAKE A MOLE GAME</title>
-    <link rel="stylesheet" href="../Assignments/styles14.css">
+    <link rel="stylesheet" href="../Assignments/styleprac.css">
   </head>
   <body>
-    <h1>WHAKE A MOLE</h1>
-    <img src="../Assignments/images/mole.png" id="mole" />
-    <img src="../Assignments/images/dirt.svg" id="mud" />
+    <h1 style="visibility:hidden">WHAKE A MOLE</h1>
+    <!-- <img src="../Assignments/images/mole.png" id="mole" />
+    <img src="../Assignments/images/dirt.svg" id="mud" /> -->
     <!-- <img src="../Assignments/images/whackamoleimage.webp" alt="" style="width: 100%;height:100vh"> -->
-    <!-- <img src="../Assignments/images/withoutwhack.png" alt="" style="width:100%;height: 100vh;margin-top: -120px;" id="front"> -->
+    <img src="https://mobimg.b-cdn.net/v2/fetch/f0/f01a622b890fc4b9dcefb9567db57804.jpeg" alt="" style="width:100%;height: 100vh;margin-top: -120px;" id="front">
     <button type="button" id="start" onclick="start()">START</button>
 
     <img src="../Assignments/images/dirt.svg" id="dirt1" class="dirt" />
