index file updated

--- a/index.html
+++ b/index.html
@@ -251,6 +251,12 @@
             <td>Unchecked</td>
             <td><i class="fa fa-pencil"></i> <i class="fa fa-trash"></i></td>
         </tr>
+        <tr>
+            <td>16.TO DO LIST</td>
+            <td><a href="./Assignments/Assignment15.html">List</a></td>
+            <td>Unchecked</td>
+            <td><i class="fa fa-pencil"></i> <i class="fa fa-trash"></i></td>
+        </tr>
     </table>
 </body>
 
