--- a/Assignments/Assignment15.html
+++ b/Assignments/Assignment15.html
@@ -13,6 +13,15 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css
 
     ">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Sacramento&family=Yellowtail&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Sacramento&family=Satisfy&family=Yellowtail&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>To-do List</header>
@@ -23,7 +32,13 @@
       </button>
     </form>
     <div class="todo-container">
-      <ul class="todo-list"></ul>
+        <!-- <input id="saveField" placeholder="0" type="number"></input>
+        <button onclick="load()">load</button>
+        <button onclick="save()">save</button> -->
+        <div class="newStore1">
+
+        </div>
+              <ul class="todo-list"></ul>
     </div>
     <script src="./script15.js"></script>
 </body>
