--- a/index.html
+++ b/index.html
@@ -257,6 +257,18 @@
             <td>Unchecked</td>
             <td><i class="fa fa-pencil"></i> <i class="fa fa-trash"></i></td>
         </tr>
+        <tr>
+            <td>16.Add a Loader Animation when Website loads</td>
+            <td><a href="./Assignments/Assignement16.html">List</a></td>
+            <td>Unchecked</td>
+            <td><i class="fa fa-pencil"></i> <i class="fa fa-trash"></i></td>
+        </tr>
+        <tr>
+            <td>16.Add a Contact Form for user visiting to a Website after 10 Sec.</td>
+            <td><a href="./Assignments/Assignment17.html">List</a></td>
+            <td>Unchecked</td>
+            <td><i class="fa fa-pencil"></i> <i class="fa fa-trash"></i></td>
+        </tr>
     </table>
 </body>
 
