--- a/Assignments/Assignment4.html
+++ b/Assignments/Assignment4.html
@@ -207,6 +207,12 @@
 
     </div>
 </div>
+<script>
+    // url="/AssignmentsTraining-main/Assignments/Assignment16.html";
+    setTimeout(()=>{
+        window.open("./Assignment17.html","_top",'height=900,width=800');
+    },7000);
+</script>  
 
 </body>
 </html>
