--- a/Assignments/Assignment18.html
+++ b/Assignments/Assignment18.html
@@ -208,12 +208,12 @@
     </div>
 </div>
 
-<!-- <script>
+<script>
     // url="/AssignmentsTraining-main/Assignments/Assignment16.html";
     setTimeout(()=>{
         window.open("./Assignment17.html","_top",'height=900,width=800');
     },7000);
-</script>   -->
+</script>  
 
 
 
