--- a/index.html
+++ b/index.html
@@ -264,8 +264,20 @@
             <td><i class="fa fa-pencil"></i> <i class="fa fa-trash"></i></td>
         </tr>
         <tr>
-            <td>16.Add a Contact Form for user visiting to a Website after 10 Sec.</td>
+            <td>17.Add a Contact Form for user visiting to a Website after 10 Sec.</td>
             <td><a href="./Assignments/Assignment18.html">Contact Form</a></td>
+            <td>Unchecked</td>
+            <td><i class="fa fa-pencil"></i> <i class="fa fa-trash"></i></td>
+        </tr>
+        <tr>
+            <td>18.Show Notification when user not connected to Internet.                </td>
+            <td><a href="./Assignments/Assignment19.html">Connectivity Status</a></td>
+            <td>Unchecked</td>
+            <td><i class="fa fa-pencil"></i> <i class="fa fa-trash"></i></td>
+        </tr>
+        <tr>
+            <td>18.Show Notification when user not connected to Internet.                </td>
+            <td><a href="./Assignments/Assignment19.html">Connectivity Status</a></td>
             <td>Unchecked</td>
             <td><i class="fa fa-pencil"></i> <i class="fa fa-trash"></i></td>
         </tr>
