--- a/Assignments/Assignment17.html
+++ b/Assignments/Assignment17.html
@@ -95,7 +95,7 @@
             box-shadow: 2px 2px 2px grey;
             margin-top: 20px;
             padding: 8px;
-            margin-left: 14.5vh;
+            margin-left: 19.5vh;
 
 
         }
@@ -137,8 +137,8 @@
         }
         select{
             padding: 8px;
-            width: 28vh;
-            margin-left: 28vh;
+            width: 24vh;
+            margin-left: 31vh;
             margin-top: 20px;
 
         }
@@ -155,7 +155,7 @@
         <br>
         <label for="">On a scale of 1-10 , how good it was : </label><input type="number" placeholder="Enter a number between 1 and 10">
         <br>
-        <label for="">Where you want to use it : </label><select option="1">At home</select>
+        <label for="">Where you want to use it : </label><select><option value="option1">At home</option><option value="option1">At office</option></select>
         <br>
         <label for="circles">At what time We can contact you? : </label><input type="radio" id="circles">Morning
         <input type="radio" id="circles">Afternoon
